--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "mocha test/routes/person-test.js"
   },
   "dependencies": {
     "body-parser": "~1.17.1",
@@ -17,6 +18,7 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "chai-http": "^2.0.1",
+    "chai-things": "^0.2.0",
     "mocha": "^3.4.2"
   }
 }
