--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "mocha test/routes/person-test.js",
-    "test": "set NODE_ENV=test && mocha test/routes/person-test.js"
+    "test": "mocha test/routes/person-test.js test/routes/events-test.js",
+    "test": "set NODE_ENV=test && mocha test/routes/person-test.js mocha test/routes/events-test.js"
+
   },
   "dependencies": {
     "body-parser": "~1.17.1",
