--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "scripts": {
     "start": "webpack --config webpack.config.js",
-    "test": "set NODE_ENV=test && mocha test/routes/person-test.js mocha test/routes/events-test.js",
+    "test": "NODE_ENV=test mocha",
     "start-prod": "NODE_ENV=prod node bin/www",
-    "build-prod": "webpack --config webpack-prod.config.js",
+    "server": "node bin/www",
+    "build:prod": "webpack --config webpack-prod.config.js",
+    "build:dev": "webpack",
     "build": "webpack"
   },
   "dependencies": {
