--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "start": "npm-run-all test build:dev server",
     "test": "cross-env NODE_ENV=test && mocha test/routes/person-test.js",
     "start-prod": "NODE_ENV=prod node bin/www",
-    "server": "node bin/www",
+    "server": "nodemon bin/www", 
     "build:prod": "webpack --config webpack-prod.config.js",
     "build:dev": "webpack",
+    "prebuild:dev": "npm-run-all test clean-build:dev",
+    "postbuild:dev": "npm run server",
+    "build:watch": "webpack --watch",
     "build": "webpack"
   },
   "dependencies": {
@@ -43,7 +46,7 @@
     "html-webpack-plugin": "^2.30.1",
     "istanbul": "^0.4.5",
     "mocha": "^2.4.5",
-    "nodemon": "^1.12.1",
+    "nodemon": "^1.12.5",
     "npm-run-all": "^4.1.2",
     "rimraf": "^2.6.2",
     "style-loader": "^0.13.1",
