--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "npm-run-all test build:dev server",
-    "start-prod": "NODE_ENV=prod node bin/www",
+    "test": "set NODE_ENV=test && mocha test/routes/person-test.js mocha test/routes/events-test.js",
+    "start-prod": "NODE_ENV=prod PORT=4000 node bin/www",
     "server": "nodemon bin/www", 
     "build:prod": "webpack --config webpack-prod.config.js",
     "build:dev": "webpack",
