--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "private": true,
   "scripts": {
     "start": "npm-run-all test build:dev server",
-    "start-prod": "NODE_ENV=prod node bin/www",
+    "test": "cross-env NODE_ENV=test PORT=4000 mocha test/routes/events-test.js test/routes/person-test.js",
+    "coverage": "cross-env NODE_ENV=test PORT=4000 istanbul cover _mocha -- test/routes/*-test.js",
+    "start-prod": "NODE_ENV=prod PORT=4000 node bin/www",
     "server": "nodemon bin/www", 
     "build:prod": "webpack --config webpack-prod.config.js",
     "build:dev": "webpack",
     "prebuild:dev": "npm-run-all test clean-build:dev",
     "postbuild:dev": "npm run server",
     "build:watch": "webpack --watch",
-    "build": "webpack"
-  },
+    "build": "webpack",
+    "start": "node ./bin/www"
+    },
   "dependencies": {
     "angular": "^1.3.10",
     "angular-route": "^1.3.10",
