--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "html-webpack-plugin": "^2.30.1",
     "istanbul": "^0.4.5",
     "mocha": "^2.4.5",
+    "mocha-lcov-reporter": "^1.3.0",
     "nodemon": "^1.12.5",
     "npm-run-all": "^4.1.2",
     "rimraf": "^2.6.2",
